--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#"><img id="limepic" src="home/global/img/Logo_Website.png"></a>
+			<!-- <a class="navbar-brand" href="#"><img id="limepic" src="home/global/img/Logo_Website.png"></a> -->
+			<a class="navbar-brand" href="#"></a>
+
+			
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -31,13 +34,13 @@
 						<a class="nav-link" href="#">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">First Steps</a>
+						<a class="nav-link" href="./home/firstSteps/html/firstSteps.html">First Steps</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="./home/trickTutorials/html/AllTricks.html">Trick Tutorials</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Penmodding</a>
+						<a class="nav-link" href="./home/penModding/html/penmodding.html">Penmodding</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Inspiration</a>
@@ -106,7 +109,7 @@
 					
 					
 				</div>
-				<a href="./home/trickTutorials/html/AllTricks.html">
+				<a href="./home/firstSteps/html/firstSteps.html">
 				<div class="card"> <img class="card-img-top" src="./home/global/img/palmspin.png" alt="Card image cap">
 					<div class="card-body">
 						<h4 class="card-title">First Steps</h4> </div>
@@ -120,7 +123,7 @@
 				</div>
 			</div></a>
 			<div class="col-sm-12 col-md-6">
-				<a href="./home/trickTutorials/html/AllTricks.html">
+				<a href="./home/penModding/html/penmodding.html">
 				<div class="card"> <img class="card-img-top" src="./home/global/img/oneMx.jpg" alt="Card image cap">
 					<div class="card-body">
 						<h4 class="card-title">Penmodding</h4> </div>
@@ -159,9 +162,10 @@
 		</div>
 	</div>
 
-
+<!--
 <hr class="my-4">
-	<!--- Fixed background -->
+	- Fixed background 
+
 <figure>
 	<div class="fixed-wrap">
 		<div id="fixed">
@@ -169,7 +173,7 @@
 		</div>
 	</div>
 </figure>
-
+-->
 	<!--- Emoji Section -->
 <button class="fun" data-toggle="collapse" data-target="#emoji">click for fun</button>
 <div id="emoji" class="collapse">
