--- a/home/firstSteps/html/firstSteps.html
+++ b/home/firstSteps/html/firstSteps.html
@@ -160,7 +160,7 @@
     <h1 class="display-4 header">Notation</h1>
     <hr class="notationHr">
     <div class="container-fluid padding row " id="notationContainer">
-      <div class="col">
+      <div class="col-xs-6 " id="textCol">
 
         <p class="lead">As you can see in the picture, every finger on your hand has a notation. The thumb is T (for
           thumb), index is 1, middle is 2, ring is 3 and pinky is 4.
@@ -179,7 +179,7 @@
           "23" (between ring and middlefinger) and ending in "12" (between middle and indexfinger).</p>
       </div>
 
-      <div class="col">
+      <div class="col-xs-6" id="picCol">
         <img class="pic" src="../../img/background.png" />
       </div>
     </div>
