test media queries

--- a/home/firstSteps/html/firstSteps.html
+++ b/home/firstSteps/html/firstSteps.html
@@ -40,7 +40,7 @@
     <h1 class="display-4 header">FAQ</h1>
     <hr class="notationHr">
 
-    <div class="container-fluid padding row " id="notationContainer">
+    <div class=" padding row " id="notationContainer">
       <div class="col-xs-6" id="faqPic">
         <img class="pic" src="../../img/background3.png">
       </div>
@@ -346,15 +346,6 @@
 
     </div>
   </div>
-
-
-
-
-
-
-
-
-
 
 
   <!-- import footer -->
