--- a/home/penModding/html/penmods.html
+++ b/home/penModding/html/penmods.html
@@ -64,16 +64,16 @@
 
       <!-- Links -->
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item ">
           <a class="nav-link" href="../../../index.html">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../../firstSteps/html/firstSteps.html">First Steps</a>
+          <a class="nav-link" href="../../firstSteps/html/firstStepsPs.html">First Steps</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../../trickTutorials/html/AllTricks.html">Trick Tutorials</a>
+          <a class="nav-link" href="../../trickTutorials/html/trickTutorials.html">Trick Tutorials</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="penmods.html">Penmodding</a>
@@ -109,6 +109,7 @@
 
     <!--Slides-->
     <div class="carousel-inner" role="listbox">
+
 
       <!--First slide-->
       <div class="carousel-item active">
@@ -321,11 +322,14 @@
   </div>
 
 
-  <div class="btn-group" id="modtypebuttons">
-    <button type="button" class="btn btn-primary">Double Cap Mods</button>
-    <button type="button" class="btn btn-primary">Single Cap Mods</button>
-    <button type="button" class="btn btn-primary">Writeable Mods</button>
-    <button type="button" class="btn btn-primary">All Mods</button>
+  <div class="btn-group row justify-content-md-center" role="group" aria-label="Basic example" id="modtypebuttons">
+    <div class="col-md-auto">
+      <button type="button size" class="btn btn-primary">Double Cap Mods</button>
+      <button type="button size" class="btn btn-primary">Single Cap Mods</button></div>
+
+    <div class="col-md-auto">
+      <button type="button size" class="btn btn-primary">Writeable Mods  </button>
+      <button type="button size" class="btn btn-primary">All Mods</button></div>
   </div>
 
   <div class="wrapper">
