more tuts and responsive trick tuts

--- a/home/trickTutorials/html/trickTutorials.html
+++ b/home/trickTutorials/html/trickTutorials.html
@@ -58,7 +58,7 @@
 
 </head>
 
-<body onload="createCards()">
+<body >
 
     <!-- Start your project here-->
     <!--Navbar-->
@@ -134,47 +134,6 @@
 
                                 <!--/.Second slide-->
 
-                                <!--Third slide-->
-                                <div class="carousel-item">
-
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <div class="card mb-2">
-                                                <img class="card-img-top featured" src="../img/busterRetr.png"
-                                                    alt="Card image cap">
-                                                <div class="card-body">
-                                                    <h4 class="card-title">Card title</h4>
-                                                    <p class="card-text">Test</p>
-                                                    <a class="btn btn-primary">Tutorial</a>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-md-4 clearfix d-none d-md-block">
-                                            <div class="card mb-2">
-                                                <img class="card-img-top featured" src="../img/busterRetr.png"
-                                                    alt="Card image cap">
-                                                <div class="card-body">
-                                                    <h4 class="card-title">Card title</h4>
-                                                    <p class="card-text">Test</p>
-                                                    <a class="btn btn-primary">Tutorial</a>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-md-4 clearfix d-none d-md-block">
-                                            <div class="card mb-2">
-                                                <img class="card-img-top featured" src="../img/busterRetr.png"
-                                                    alt="Card image cap">
-                                                <div class="card-body">
-                                                    <h4 class="card-title">Card title</h4>
-                                                    <p class="card-text">Test</p>
-                                                    <a class="btn btn-primary">Tutorial</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
                                 </div>
                                 <!--/.Third slide-->
 
@@ -235,14 +194,13 @@
                 </ul>
             </div>
 
-            <div class="col-12">
-            </div>
+        
         </div>
     </div>
-    </div>
 
-    <div class="d-flex text-white" id="trickWrapper">
-        <div class="p-2 flex-fill bg-secondary">
+
+    <div class="d-flex text-white row" id="trickWrapper">
+        <div class="p-2  col-md-6">
             <div class="container-fluid padding">
                 <div class="col-24" id="trickContainer">
                     <h1 class="display-4">Gotta Learn Some Tricks!</h1>
@@ -254,7 +212,7 @@
                 </div>
             </div>
         </div>
-        <div class="p-2 flex-fill bg-secondary">
+        <div class="p-2 col-md-6">
             <div class="container-fluid padding">
                 <div class="col-24" id="linkContainer">
                     <h1 class="display-4">Gotta Learn Some Linkings!</h1>
