--- a/home/penModding/html/penmods.html
+++ b/home/penModding/html/penmods.html
@@ -154,7 +154,7 @@
                     <div class="row">
                       <div class="col-md-4">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/busterRetr.png" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/sevenwatercolor.png" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
                             <p class="card-text">Test</p>
@@ -165,7 +165,7 @@
 
                       <div class="col-md-4 clearfix d-none d-md-block">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/busterRetr.png" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/ppm.jpg" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
                             <p class="card-text">Test</p>
@@ -178,7 +178,7 @@
 
                       <div class="col-md-4 clearfix d-none d-md-block">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/busterRetr.png" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/nautilus mod.jpg" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
                             <p class="card-text">Test</p>
@@ -197,7 +197,7 @@
                     <div class="row">
                       <div class="col-md-4">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/busterRetr.png" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/zolty mod.jpg" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
                             <p class="card-text">Test</p>
@@ -208,7 +208,7 @@
 
                       <div class="col-md-4 clearfix d-none d-md-block">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/busterRetr.png" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/sonoda emboss.jpg" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
                             <p class="card-text">Test</p>
@@ -219,7 +219,7 @@
 
                       <div class="col-md-4 clearfix d-none d-md-block">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/busterRetr.png" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/J-Vic dc.jpg" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
                             <p class="card-text">Test</p>
@@ -238,7 +238,7 @@
                     <div class="row">
                       <div class="col-md-4">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/busterRetr.png" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/sevensweetdrop.jpg" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
                             <p class="card-text">Test</p>
@@ -249,7 +249,7 @@
 
                       <div class="col-md-4 clearfix d-none d-md-block">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/busterRetr.png" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/colors_mod.jpg" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
                             <p class="card-text">Test</p>
