fixed index links, timeline icons

--- a/home/firstSteps/html/firstStepsPs.html
+++ b/home/firstSteps/html/firstStepsPs.html
@@ -69,7 +69,7 @@
                     <a class="nav-link" href="../../penModding/html/penmods.html">Penmodding</a>
                 </li>
                 <!-- Dropdown -->
-               
+
             </ul>
             <!-- Links -->
 
@@ -101,7 +101,8 @@
                                 <h1 class="font-weight-bold text-uppercase">The First Steps Towards A Big Journey!</h1>
                             </li>
                             <li>
-                                <p class="font-weight-bold text-uppercase py-4">before we start, let's get some FAQs out of the way
+                                <p class="font-weight-bold text-uppercase py-4">before we start, let's get some FAQs out
+                                    of the way
                                     <br /></p>
                             </li>
 
@@ -406,7 +407,7 @@
 
                         <div class="timeline-item">
                             <div class="timeline-icon">
-                                <i class="fas fa-cat"></i>
+                                <img id="imgfundamentals"src="https://img.icons8.com/cotton/64/000000/spider.png">
                             </div>
                             <div class="timeline-content">
                                 <p class="timeline-content-date">Fundamentals</h2>
@@ -424,7 +425,8 @@
 
                         <div class="timeline-item">
                             <div class="timeline-icon">
-                                <i class="fa fa-phone" aria-hidden="true"></i>
+                                <img src="https://img.icons8.com/cotton/64/000000/crab--v1.png"> 
+                             
                             </div>
                             <div class="timeline-content right">
                                 <p class="timeline-content-date">Basics</h2>
@@ -446,7 +448,9 @@
 
                         <div class="timeline-item ">
                             <div class="timeline-icon">
-                                <i class="fas fa-dragon"></i> </div>
+                                <img src="https://img.icons8.com/cotton/64/000000/owl--v2.png">
+
+                            </div>
                             <div class="timeline-content">
                                 <p class="timeline-content-date">Intermediate</h2>
                                     <hr>
@@ -471,7 +475,7 @@
 
                         <div class="timeline-item">
                             <div class="timeline-icon">
-                                <i class="fa fa-trophy" aria-hidden="true"></i>
+                                <img src="https://img.icons8.com/cotton/64/000000/bear.png">
                             </div>
                             <div class="timeline-content right">
                                 <p class="timeline-content-date">Advanced</h2>
@@ -492,8 +496,8 @@
 
                         <div class="timeline-item">
                             <div class="timeline-icon">
-                                <i class="fa fa-trophy" aria-hidden="true"></i>
-                            </div>
+                                <img id="imgexpert" src="https://img.icons8.com/cotton/64/000000/shark.png">                       
+                             </div>
                             <div class="timeline-content ">
                                 <p class="timeline-content-date">Expert</h2>
                                     <hr>
