--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar fixed-top">
 
     <!-- Navbar brand -->
-    <a class="navbar-brand" href="index.html">LimeZzje</a>
+    <a class="navbar-brand" href="index.html">Made by LimeZzje</a>
 
     <!-- Collapse button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
