--- a/home/trickTutorials/html/trickTutorials.html
+++ b/home/trickTutorials/html/trickTutorials.html
@@ -15,7 +15,6 @@
 
     <!-- MDB icon
   <link rel="icon" href="../../mdb/img/mdb-favicon.ico" type="image/x-icon"> -->
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <!-- Google Fonts Roboto -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
@@ -34,7 +33,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
 
-    <link rel="stylesheet" type="text/css" href="../../global/css/footer.css" />
 
     <link rel="stylesheet" type="text/css" href="../../global/css/style.css" />
 
@@ -58,7 +56,7 @@
 
 </head>
 
-<body >
+<body>
 
     <!-- Start your project here-->
     <!--Navbar-->
@@ -103,6 +101,7 @@
     </nav>
     <!--/.Navbar-->
 
+
     <!--Carousel Wrapper-->
     <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel" data-interval="false">
 
@@ -119,11 +118,16 @@
                         <source src="https://mdbootstrap.com/img/video/animation-intro.mp4" type="video/mp4" />
                     </video>
                     <!-- Carousel content -->
-                    <div class="full-bg-img flex-center mask rgba-indigo-light white-text">
+                    <div class=" flex-center mask ">
                         <ul class="animated fadeInUp col-md-12 list-unstyled list-inline">
                             <li>
                                 <h1 class="font-weight-bold text-uppercase">Trick Tutorials - Better Every Day!</h1>
                             </li>
+                            <li>
+                                <p class="font-weight-bold text-uppercase py-4">Check out the many Trick Tutorials to
+                                    improve your skill on a daily basis <br /> Happy spinning!</p>
+                            </li>
+
                             <li>
                                 <iframe muted autoplay loop playsinline width="720" height="480"
                                     src="https://www.youtube.com/embed/R5DwW0VC6Aw?rel=0&amp;autoplay=1&mute=1&loop=1&rel=0&showinfo=0&color=white&iv_load_policy=3&playlist=R5DwW0VC6Aw"
@@ -134,22 +138,22 @@
 
                                 <!--/.Second slide-->
 
-                                </div>
-                                <!--/.Third slide-->
-
                     </div>
-                    <!--/.Slides-->
+                    <!--/.Third slide-->
 
                 </div>
-                <!--/.Carousel Wrapper-->
-                </ul>
-                <!--Indicators-->
+                <!--/.Slides-->
 
             </div>
+            <!--/.Carousel Wrapper-->
+            </ul>
+            <!--Indicators-->
 
         </div>
 
-        <!--/Mask-->
+    </div>
+
+    <!--/Mask-->
     </div>
     <!--/First slide-->
 
@@ -194,7 +198,7 @@
                 </ul>
             </div>
 
-        
+
         </div>
     </div>
 
