--- a/home/trickTutorials/html/trickTutorials.html
+++ b/home/trickTutorials/html/trickTutorials.html
@@ -118,7 +118,7 @@
                         <source src="https://mdbootstrap.com/img/video/animation-intro.mp4" type="video/mp4" />
                     </video>
                     <!-- Carousel content -->
-                    <div class=" flex-center mask ">
+                    <div class="  mask ">
                         <ul class="animated fadeInUp col-md-12 list-unstyled list-inline">
                             <li>
                                 <h1 class="font-weight-bold text-uppercase">Trick Tutorials - Better Every Day!</h1>
@@ -135,8 +135,8 @@
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen>
                                 </iframe>
-
-                                <!--/.Second slide-->
+                            </li>
+                            <!--/.Second slide-->
 
                     </div>
                     <!--/.Third slide-->
@@ -166,11 +166,9 @@
             <div class="col-12">
                 <h1 class="display-4">Gotta Learn 'Em All!</h1>
 
-
-                <button id="disclaimerButton" class="button btn btn-danger" onclick="handleDisclaimerClick()">Please
-                    Click Me To
-                    Read The Disclaimer!</button>
-                <ul id="disclaimerUl" class="list-group list-group-flush">
+                <button id="disclaimerButton" class="button btn btn-danger" onclick="handleDisclaimerClick()">
+                    Disclaimer!</button>
+                <ul id="disclaimerUl" class="list-group ">
                     <li class="lead">
                         <p>This list is entierly subjective
                             but it should
@@ -201,23 +199,21 @@
 
         </div>
     </div>
+    <hr />
 
-
-    <div class="d-flex text-white row" id="trickWrapper">
+    <div class="d-flex  text-white row" id="trickWrapper">
         <div class="p-2  col-md-6">
-            <div class="container-fluid padding">
+            <div class="centertricks container-fluid padding">
                 <div class="col-24" id="trickContainer">
                     <h1 class="display-4">Gotta Learn Some Tricks!</h1>
                     <div class="demo-container">
                         <div id="trickview"></div>
-
                     </div>
-
                 </div>
             </div>
         </div>
         <div class="p-2 col-md-6">
-            <div class="container-fluid padding">
+            <div class="centertricks container-fluid padding">
                 <div class="col-24" id="linkContainer">
                     <h1 class="display-4">Gotta Learn Some Linkings!</h1>
                     <div class="demo-container">
@@ -228,7 +224,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 
     <!-- End your project here-->
