--- a/index.html
+++ b/index.html
@@ -105,19 +105,25 @@
             <source src="https://mdbootstrap.com/img/video/Lines.mp4" type="video/mp4" />
           </video>
           <!-- Carousel content -->
-          <div class="full-bg-img flex-center mask rgba-indigo-light white-text">
-            <ul class="animated fadeInUp col-md-12 list-unstyled list-inline">
+          <div class="full-bg-img  mask rgba-indigo-light white-text">
+            <ul class="animated  fadeInUp col-md-12 list-unstyled list-inline">
               <li>
                 <h1 class="font-weight-bold text-uppercase">Penspinning</h1>
                 <h1 class="font-weight-bold text-uppercase">Step By Step And Easy To Learn</h1>
               </li>
               <li>
+                <iframe muted autoplay loop playsinline width="720" height="480"
+                    src="https://www.youtube.com/embed/SxAs4qXoyjw?rel=0&amp;autoplay=1&mute=1&loop=1&rel=0&showinfo=0&color=white&iv_load_policy=3&playlist=R5DwW0VC6Aw"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </li>
+              <li>
                 <p class="font-weight-bold text-uppercase py-4">Join our awesome community on Discord</p>
                 <button href="#" class="btn btn-primary" >Awesome Community Name</button>
 
-              </li>
-
-              </li>
+                 </li>
               <!--Carousel Wrapper-->
            
               <!--/.Carousel Wrapper-->
