--- a/home/penModding/html/penmods.html
+++ b/home/penModding/html/penmods.html
@@ -322,14 +322,14 @@
   </div>
 
 
-  <div class="btn-group row justify-content-md-center" role="group" aria-label="Basic example" id="modtypebuttons">
+  <div class="btn-group row " role="group" aria-label="Basic example" id="modtypebuttons">
     <div class="col-md-auto">
-      <button type="button size" class="btn btn-primary">Double Cap Mods</button>
-      <button type="button size" class="btn btn-primary">Single Cap Mods</button></div>
+      <button type="button size" class="btn btn-primary sameSize">Double Cap Mods</button>
+      <button type="button size" class="btn btn-primary sameSize">Single Cap Mods</button></div>
 
     <div class="col-md-auto">
-      <button type="button size" class="btn btn-primary">Writeable Mods  </button>
-      <button type="button size" class="btn btn-primary">All Mods</button></div>
+      <button type="button size" class="btn btn-primary sameSize">Writeable Mods  </button>
+      <button type="button size" class="btn btn-primary sameSize">All Mods</button></div>
   </div>
 
   <div class="wrapper">
