--- a/home/penModding/html/penmods.html
+++ b/home/penModding/html/penmods.html
@@ -81,12 +81,11 @@
         <!-- Dropdown -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">Dropdown</a>
+            aria-expanded="false">Mod Categories</a>
           <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Double Cap Mods</a>
-            <a class="dropdown-item" href="#">Single Cap Mods</a>
-            <a class="dropdown-item" href="#">Writeable Mods</a>
-            <a class="dropdown-item" href="#">All Mods</a>
+            <a class="dropdown-item" onclick="filterDC()">Double Cap Mods </a>
+            <a class="dropdown-item" onclick="filterSC()">Single Cap Mods</a>
+            <a class="dropdown-item" onclick="showAllMods()">All Mods</a>
           </div>
         </li>
       </ul>
@@ -149,27 +148,25 @@
                 <div class="carousel-inner" id="cardCarousel" role="listbox">
 
                   <!--First slide-->
-                  <div class="carousel-item active">
+                  <div class="carousel-item active group-container">
 
                     <div class="row">
                       <div class="col-md-4">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/sevenwatercolor.png" alt="Card image cap" >
+                          <img class="card-img-top featured" src="../img/f_avatar.png" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Test</p>
-                            <a class="btn btn-primary">Tutorial</a>
+                            <p class="card-text">by vore-tex</p>
                           </div>
                         </div>
                       </div>
 
                       <div class="col-md-4 clearfix d-none d-md-block">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/ppm.jpg" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/f_baoo.jpg" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Test</p>
-                            <a class="btn btn-primary">Tutorial</a>
+                            <p class="card-text">by sanchiu_33</p>
                           </div>
                         </div>
                       </div>
@@ -178,17 +175,16 @@
 
                       <div class="col-md-4 clearfix d-none d-md-block">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/nautilus mod.jpg" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/f_clearstuhl.png" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Test</p>
-                            <a class="btn btn-primary">Tutorial</a>
+                            <p class="card-text">by syrti</p>
                           </div>
                         </div>
                       </div>
                     </div>
 
-                    
+
 
                   </div>
                   <!--/.First slide-->
@@ -196,36 +192,33 @@
                   <!--Second slide-->
                   <div class="carousel-item">
 
-                    <div class="row">
+                    <div class="row ">
                       <div class="col-md-4">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/zolty mod.jpg" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/f_firefly.jpg" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Test</p>
-                            <a class="btn btn-primary">Tutorial</a>
+                            <p class="card-text">by vore-tex</p>
                           </div>
                         </div>
                       </div>
 
                       <div class="col-md-4 clearfix d-none d-md-block">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/sonoda emboss.jpg" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/f_invwaterfall.png" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Test</p>
-                            <a class="btn btn-primary">Tutorial</a>
+                            <p class="card-text">by vore-tex</p>
                           </div>
                         </div>
                       </div>
 
                       <div class="col-md-4 clearfix d-none d-md-block">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/J-Vic dc.jpg" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/f_kuzu.jpg" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Test</p>
-                            <a class="btn btn-primary">Tutorial</a>
+                            <p class="card-text">by sanchiu_33</p>
                           </div>
                         </div>
                       </div>
@@ -240,33 +233,30 @@
                     <div class="row">
                       <div class="col-md-4">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/sevensweetdrop.jpg" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/f_san mods.jpg" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Test</p>
-                            <a class="btn btn-primary">Tutorial</a>
+                            <p class="card-text">by sanchiu_33</p>
                           </div>
                         </div>
                       </div>
 
                       <div class="col-md-4 clearfix d-none d-md-block">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/colors_mod.jpg" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/f_syrti.JPG" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Test</p>
-                            <a class="btn btn-primary">Tutorial</a>
+                            <p class="card-text">by syrti</p>
                           </div>
                         </div>
                       </div>
 
                       <div class="col-md-4 clearfix d-none d-md-block">
                         <div class="card mb-2">
-                          <img class="card-img-top featured" src="../img/busterRetr.png" alt="Card image cap">
+                          <img class="card-img-top featured" src="../img/f_turt.png" alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Test</p>
-                            <a class="btn btn-primary">Tutorial</a>
+                            <p class="card-text">by Tek</p>
                           </div>
                         </div>
                       </div>
@@ -282,7 +272,7 @@
               <!--/.Carousel Wrapper-->
             </ul>
             <!--Indicators-->
-           
+
             <!--/.Indicators-->
           </div>
 
@@ -311,22 +301,21 @@
   </div>
 
   <div class="input-group md-form form-sm form-2 pl-0" id="searchWrapper">
-    <input id="searchBarMain" class="form-control my-0 py-1 red-border" type="text" placeholder="Search for a Penmod"
+    <input id="searchBarMain" class="form-control my-0 py-1 white-border" type="text" placeholder="Search for a Penmod"
       aria-label="Search" onkeyup="searchMods()">
     <div class="input-group-append">
-      <span class="input-group-text red lighten-3" id="basic-text1"><i class="fas fa-search text-grey"
+      <span class="input-group-text green lighten-4" type="color" value="white" id="basic-text1"><i class="fas fa-search text-white"
           aria-hidden="true"></i></span>
     </div>
   </div>
 
 
   <div class="btn-group row " role="group" aria-label="Basic example" id="modtypebuttons">
-    <div class="col-md-auto">
+    <div class="" id="button-wrapper">
       <button type="button size" class="btn btn-primary sameSize" onclick="filterDC()">Double Cap Mods</button>
-      <button type="button size" class="btn btn-primary sameSize" onclick="filterSC()">Single Cap Mods</button></div>
-
-    <div class="col-md-auto">
-      <button type="button size" class="btn btn-primary sameSize" onclick="showAllMods()">All Mods</button></div>
+      <button type="button size" class="btn btn-primary sameSize" onclick="filterSC()">Single Cap Mods</button>
+      <button type="button size" class="btn btn-primary sameSize" onclick="showAllMods()">All Mods</button>
+    </div>
   </div>
 
   <div class="wrapper">
