breakdown fix, xelphire link

--- a/home/firstSteps/html/firstStepsPs.html
+++ b/home/firstSteps/html/firstStepsPs.html
@@ -467,7 +467,7 @@
                                     <br />
                                     <p class="timeline-content-date">Before you progress</p>
                                     <hr>
-                                    <p class="trickinfo">Learn all Fundamentals in <a href="">Slots</a></p>
+                                    <p class="trickinfo">Learn all Fundamentals in all <a href="">Slots</a></p>
                                     <p class="trickinfo">Learn Sonic, Fingerpass & Charge in <a href="">Palm Up, Palm
                                             Down and Palm Side</a></p>
 
