--- a/home/trickTutorials/html/trickTutorials.html
+++ b/home/trickTutorials/html/trickTutorials.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Penmodding</title>
+    <title>Trick Tutorials</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
