breakdown generator fix & small changes

--- a/home/firstSteps/html/firstStepsPs.html
+++ b/home/firstSteps/html/firstStepsPs.html
@@ -164,7 +164,7 @@
                                                         <i class="icon fas fa-comment-alt fa-2x p-3 mr-4 float-left black-text"
                                                             aria-hidden="true"></i>
                                                         <h4 class="FAQuestion text-uppercase white-text mb-0 py-3 mt-1">
-                                                            I've been trying *insert trickname* for hours/weeks and I
+                                                            I've been trying this trick for hours/weeks and I
                                                             can't get it. Help!
 
                                                         </h4>
