--- a/home/trickTutorials/html/trickTutorials.html
+++ b/home/trickTutorials/html/trickTutorials.html
@@ -161,26 +161,22 @@
 
     </div>
 
-    <div class="container-fluid padding">
+    <div class="container-fluid ">
         <div class="row welcome text-center">
             <div class="col-12">
-                <h1 class="display-4">Gotta Learn 'Em All!</h1>
+                <h1 class="display-4 padding">Gotta Learn 'Em All!</h1>
 
-                <button id="disclaimerButton" class="button btn btn-danger" onclick="handleDisclaimerClick()">
-                    Disclaimer!</button>
-                <ul id="disclaimerUl" class="list-group ">
+                <ul class="list-group ">
                     <li class="lead">
                         <p>This list is entierly subjective
                             but it should
                             give you an idea of what tricks to learn in which order.</p>
                     </li>
                     <li class="lead">
-                        <p>Only once you learned a trick in all slots, reverse, palm down/palm normal
+                        <p id="underline">Only once you learned a trick in all slots, reverse, palm down/palm normal
                             (if possible), you have mastered it. <br />
-                            Learning tricks in reverse and in all slots is as important as learning the trick normal in
-                            only
-                            one slot!!!
-                            Make sure you dont miss out on that.</p>
+                            <u id="underline">Learning tricks in reverse and in all slots is VERY important!!! If you only learn the Trick in one slot, you will have problems making combos!
+                            Try to learn every trick in all slots and in all slots reverse!</u></p>
                     </li>
                     <li class="lead">
                         <p>For example: You just learned "Sonic 23-12": now try to learn "Sonic reverse
